--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -120,7 +120,16 @@
 }
 
 @media screen and (max-width: 500px) {
-  body {
-    font-size: 13px;
+  $font-size:   13px;
+
+  #contact {
+    .social {
+      bottom: 80px;
+      font-size: 300%;
+
+      i {
+        margin-right: 5px;
+      }
+    }
   }
 }
