--- a/css/app.css
+++ b/css/app.css
@@ -9751,6 +9751,9 @@ button, a {
   #about .col-sm-10 {
     padding-left: 50px; } }
 @media screen and (max-width: 850px) {
+  .nav {
+    display: none; }
+
   #about .desc {
     font-size: 140%; }
 
