--- a/css/app.css
+++ b/css/app.css
@@ -9763,16 +9763,22 @@ button, a {
     padding-left: 15px; }
   #about .desc {
     font-size: 130%;
-    margin-top: 50px;
-    margin-bottom: 50px; }
+    margin-top: 20px;
+    margin-bottom: 20px; }
   #about .head {
     font-size: 160%; }
+
+  #work h1 {
+    margin-top: 30px; }
+  #work h2 {
+    margin-top: 30px; }
 
   #contact p {
     font-size: 100%; }
   #contact .social {
-    bottom: 130px;
-    font-size: 250%; } }
+    display: none; }
+  #contact .copyright p {
+    display: none; } }
 @media screen and (max-width: 590px) {
   #about .desc {
     font-size: 120%; }
