--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -82,12 +82,21 @@
   }
 
   #work {
-    h1 {
-      margin-top: 30px;
+
+
+    .work-h1 {
+      margin-top: 20px;
     }
-    h2 {
-      margin-top: 30px;
+
+    .design-h2 {
+      margin-top: 20px;
     }
+
+    .develop-h2 {
+      margin-top: 20px;
+    }
+
+
   }
 
   #contact {
@@ -129,6 +138,7 @@
     p.develop-desc {
       font-size: 100%;
     }
+
   }
 
   #contact {
@@ -145,9 +155,6 @@
   }
 
   #about {
-    .skills {
-
-    }
 
     .row:last-of-type {
       display: none;
